k8s/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: foreseesnetwork
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: livechat-client:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
              
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: foreseesnetwork
spec:
  selector:
    app: client
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
