k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fn-ingress
  namespace: foreseesnetwork
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: foreseesnetwork.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 4000
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
